MODON MRE BPDEV/force-app/main/default/objects/Escalation_Tier__mdt/Escalation_Tier__mdt.object-meta.xml
<CustomObject>
    <label>Escalation Tier</label>
    <pluralLabel>Escalation Tier</pluralLabel>
</CustomObject>