MODON MRE BPDEV/force-app/main/default/objects/Escalation_Tier__mdt/fields/Days_Since_SO__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_SO__c</fullName>
    <label>Days Since SO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>