MODON MRE BPDEV/force-app/main/default/objects/Escalation_Tier__mdt/fields/Is_Repeating__c.field-meta.xml
<CustomField>
    <fullName>Is_Repeating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Repeating</label>
    <type>Checkbox</type>
</CustomField>