MODON MRE BPDEV/force-app/main/default/objects/Escalation_Tier__mdt/fields/Tier_Label__c.field-meta.xml
<CustomField>
    <fullName>Tier_Label__c</fullName>
    <label>Tier Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>