MODON MRE BPDEV/force-app/main/default/objects/Escalation_Tier__mdt/fields/Track__c.field-meta.xml
<CustomField>
    <fullName>Track__c</fullName>
    <label>Track</label>
    <length>80</length>
    <type>Text</type>
</CustomField>